[gd_scene load_steps=4 format=1]

[ext_resource path="res://scripts/level_select.gd" type="Script" id=1]
[ext_resource path="res://theme/space_dust.tex" type="Texture" id=2]
[ext_resource path="res://font/spacejunkXL.fnt" type="BitmapFont" id=3]

[node name="level_select" type="Control"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0
script/script = ExtResource( 1 )

[node name="background" type="Sprite" parent="."]

transform/pos = Vector2( 0, 1.82153 )
transform/scale = Vector2( 1, 0.730323 )
texture = ExtResource( 2 )
centered = false
__meta__ = { "_edit_lock_":true }

[node name="cosmic_simulator" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 400.0
margin/top = 80.0
margin/right = 588.0
margin/bottom = 108.0
custom_fonts/font = ExtResource( 3 )
text = "Cosmic Simulator"
align = 1
valign = 1
uppercase = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
__meta__ = { "_edit_lock_":true }

[node name="01_iron_200_gev" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 60.0
margin/top = 140.0
margin/right = 301.0
margin/bottom = 174.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_hover = Color( 0.953125, 0.0186157, 0.0186157, 1 )
custom_colors/font_color_pressed = Color( 0.00387573, 0.992188, 0.158299, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "200 GeV iron shower"
flat = true
__meta__ = { "_edit_lock_":true }

[node name="02_electron_200_gev" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 60.0
margin/top = 175.0
margin/right = 363.0
margin/bottom = 209.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_hover = Color( 0.953125, 0.0186157, 0.0186157, 1 )
custom_colors/font_color_pressed = Color( 0.00387573, 0.992188, 0.158299, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Electron 200 GeV (200 ns)"
flat = true
__meta__ = { "_edit_lock_":true }

[node name="03_iron_200_gev" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 60.0
margin/top = 210.0
margin/right = 315.0
margin/bottom = 244.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_hover = Color( 0.953125, 0.0186157, 0.0186157, 1 )
custom_colors/font_color_pressed = Color( 0.00387573, 0.992188, 0.158299, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Iron 200 GeV (200 ns)"
flat = true
__meta__ = { "_edit_lock_":true }

[node name="04_gamma_200_gev" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 60.0
margin/top = 245.0
margin/right = 354.0
margin/bottom = 279.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_hover = Color( 0.953125, 0.0186157, 0.0186157, 1 )
custom_colors/font_color_pressed = Color( 0.00387573, 0.992188, 0.158299, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Gamma 200 GeV (300 ns)"
flat = true
__meta__ = { "_edit_lock_":true }

[node name="05_gamma_1000_gev" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 60.0
margin/top = 280.0
margin/right = 374.0
margin/bottom = 314.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_hover = Color( 0.953125, 0.0186157, 0.0186157, 1 )
custom_colors/font_color_pressed = Color( 0.00387573, 0.992188, 0.158299, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Gamma 1000 GeV (1000 ns)"
flat = true
__meta__ = { "_edit_lock_":true }

[node name="06_gamma_1000_gev" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 60.0
margin/top = 315.0
margin/right = 364.0
margin/bottom = 349.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_hover = Color( 0.953125, 0.0186157, 0.0186157, 1 )
custom_colors/font_color_pressed = Color( 0.00387573, 0.992188, 0.158299, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Gamma 1000 GeV (500 ns)"
flat = true
__meta__ = { "_edit_lock_":true }

[node name="07_pgamma_200_gev" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 60.0
margin/top = 350.0
margin/right = 424.0
margin/bottom = 384.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_hover = Color( 0.953125, 0.0186157, 0.0186157, 1 )
custom_colors/font_color_pressed = Color( 0.00387573, 0.992188, 0.158299, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Proton+Gamma 200 GeV (200 ns)"
flat = true
__meta__ = { "_edit_lock_":true }

[node name="08_proton_200_gev" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 500.0
margin/top = 140.0
margin/right = 785.0
margin/bottom = 174.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_hover = Color( 0.953125, 0.0186157, 0.0186157, 1 )
custom_colors/font_color_pressed = Color( 0.00387573, 0.992188, 0.158299, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Proton 200 GeV (200 ns)"
flat = true
__meta__ = { "_edit_lock_":true }

[node name="09_proton_1000_gev" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 500.0
margin/top = 175.0
margin/right = 805.0
margin/bottom = 209.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_hover = Color( 0.953125, 0.0186157, 0.0186157, 1 )
custom_colors/font_color_pressed = Color( 0.00387573, 0.992188, 0.158299, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Proton 1000 GeV (1000 ns)"
flat = true
__meta__ = { "_edit_lock_":true }

[node name="10_proton_1000_gev" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 500.0
margin/top = 210.0
margin/right = 877.0
margin/bottom = 244.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_hover = Color( 0.953125, 0.0186157, 0.0186157, 1 )
custom_colors/font_color_pressed = Color( 0.00387573, 0.992188, 0.158299, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Proton 1000 GeV (=1 TeV) (500 ns)"
flat = true
__meta__ = { "_edit_lock_":true }

[node name="11_proton_1019_gev" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 500.0
margin/top = 245.0
margin/right = 1004.0
margin/bottom = 279.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_hover = Color( 0.953125, 0.0186157, 0.0186157, 1 )
custom_colors/font_color_pressed = Color( 0.00387573, 0.992188, 0.158299, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Proton 10 power of 19 eV (=10 Eev) (3000 ns)"
flat = true
__meta__ = { "_edit_lock_":true }

[node name="12_alpha" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 500.0
margin/top = 280.0
margin/right = 997.0
margin/bottom = 314.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_hover = Color( 0.953125, 0.0186157, 0.0186157, 1 )
custom_colors/font_color_pressed = Color( 0.00387573, 0.992188, 0.158299, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Alpha, Gamma, Iron, Proton (200GeV) (varies)"
flat = true
__meta__ = { "_edit_lock_":true }

[node name="13_proton_1ev" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 500.0
margin/top = 315.0
margin/right = 736.0
margin/bottom = 349.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_hover = Color( 0.953125, 0.0186157, 0.0186157, 1 )
custom_colors/font_color_pressed = Color( 0.00387573, 0.992188, 0.158299, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "1 Eev proton shower"
flat = true
__meta__ = { "_edit_lock_":true }

[node name="back_to_menu" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 800.0
margin/top = 80.0
margin/right = 956.0
margin/bottom = 114.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_hover = Color( 0.953125, 0.0186157, 0.0186157, 1 )
custom_colors/font_color_pressed = Color( 0.00387573, 0.992188, 0.158299, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Back to Menu"
flat = true
__meta__ = { "_edit_lock_":true }

[connection signal="pressed" from="01_iron_200_gev" to="." method="_on_01_iron_200_gev_pressed"]

[connection signal="pressed" from="02_electron_200_gev" to="." method="_on_02_electron_200_gev_pressed"]

[connection signal="pressed" from="03_iron_200_gev" to="." method="_on_03_iron_200_gev_pressed"]

[connection signal="pressed" from="04_gamma_200_gev" to="." method="_on_04_gamma_200_gev_pressed"]

[connection signal="pressed" from="05_gamma_1000_gev" to="." method="_on_05_gamma_1000_gev_pressed"]

[connection signal="pressed" from="06_gamma_1000_gev" to="." method="_on_06_gamma_1000_gev_pressed"]

[connection signal="pressed" from="07_pgamma_200_gev" to="." method="_on_07_pgamma_200_gev_pressed"]

[connection signal="pressed" from="08_proton_200_gev" to="." method="_on_08_proton_200_gev_pressed"]

[connection signal="pressed" from="09_proton_1000_gev" to="." method="_on_09_proton_1000_gev_pressed"]

[connection signal="pressed" from="10_proton_1000_gev" to="." method="_on_10_proton_1000_gev_pressed"]

[connection signal="pressed" from="11_proton_1019_gev" to="." method="_on_11_proton_1019_gev_pressed"]

[connection signal="pressed" from="12_alpha" to="." method="_on_12_alpha_pressed"]

[connection signal="pressed" from="13_proton_1ev" to="." method="_on_13_proton_1ev_pressed"]

[connection signal="pressed" from="back_to_menu" to="." method="_on_back_to_menu_pressed"]


